--- a/index.html
+++ b/index.html
@@ -1,91 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/imagehover.css/2.0.0/css/imagehover.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="body">
-    <header class="header">
-        <a class="header__logo" href="index.html">
-            <img class="header__img" src="./Img/logo-nicky copia.png" alt="">
-        </a>
-        <nav>
-            <ul class="header__list">
-                <li class="header__item"><a class="header__item--style" href="">Inicio</a></li>
-                <li class="header__item"><a class="header__item--style" href="">Indumentaria</a></li>
-                <li class="header__item"><a class="header__item--style" href="">Calzado</a></li>
-                <li class="header__item"><a class="header__item--style" href="">Accesorios</a></li>
-                <li class="header__item"><a class="header__item--style" href="">Sale</a></li>
-                <li class="header__item"><a class="header__item--style" href="">Nosotras</a></li>
-            </ul>
-        </nav>
-    </header>
-    <hr class="body__line" color="#ffe277">
-    <main class="main">
-            <div class="main__item">
-                <a class="main__link" href="">
-                    <img class="main__img" src="./Img/indume.jpeg" width="200" height="200" alt="">
-                </a>
-                <h2 class="main__title">Indumentaria</h2>
-            </div>
-            <div class="main__item">
-                <a class="main__link" href="">
-                    <img class="main__img" src="./Img/calza.jpeg" width="200" height="200" alt="">
-                </a>
-                <h2 class="main__title">Calzado</h2>
-            </div>
-            <div class="main__item">
-                <a class="main__link" href="">
-                    <img class="main__img" src="./Img/acce.jpeg" width="200" height="200" alt="">
-                </a>
-                <h2 class="main__title">Accesorios</h2>
-            </div>
-            <div class="main__item">
-                <a class="main__link" href="">
-                    <img class="main__img" src="./Img/png_20211205_164812_0000_2.png" width="200" height="200" alt="">
-                </a>
-                <h2 class="main__title">Outlet</h2>
-            </div>
-    </main>
-    <hr class="body__line" color="#ffe277">
-    <footer class="footer">
-        <div class="footer__logos">
-            <a href="https://www.facebook.com">
-                <img class="footer__img" src="./Img/lo-face.jpeg" alt="">
-            </a>
-            <a href="https://www.instagram.com">
-                <img class="footer__img" src="./Img/lo-insta copia.jpeg" alt="">
-            </a>
-            <a href="https://www.whatsapp.com/?lang=es">
-                <img class="footer__img" src="./Img/lo-wat copia.jpeg" alt="">
-            </a>    
+<body  class="bg-image container-fluid d-flex flex-column align-items-center">
+      <header class="container-fluid header mt-3"> 
+              <!-- nav y logo  -->
+              <nav class="navbar navbar-light bg-light fixed-top">
+                <div class="container-fluid ">
+                  <a class="navbar-brand header__title" href="./index.html">Nicky</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                      <h5 class="offcanvas-title header__subtitle" id="offcanvasNavbarLabel">Nicky</h5>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                          <a class="nav-link header__text" href="./pages/indumentaria.html">Indumentaria</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link header__text" href="./pages/calzados.html">Calzados</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link header__text" href="./pages/accesorios.html">Accesorios</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle header__text" href="" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Sale
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                            <li><a class="dropdown-item header__text" href="./pages/sale.html">Temporada anterior</a></li>
+                            <li><a class="dropdown-item header__text" href="./pages/sale.html"> Sale </a></li>
+                            <li>
+                              <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item header__text" href="./pages/sale.html">Outlet Calzados</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </nav>
+              <a class="header__link" href="./index.html"><img class="img-fluid header__logo text-shadow-drop-center" src="./Img/logo-nicky copia.png" alt="Nicky Indumentaria Logo"></a>
+      </header>
+      <hr class="body__line">
+      <main class="main container-fluid my-2">
+        <div class="row main__row">
+          <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/indumentaria.html">
+            <img class="img-fluid main__img" src="./Img/indume.jpeg" alt="">
+            <figcaption class="main__caption">Indumentaria</figcaption>
+          </a>
+          <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/calzados.html">       
+            <img class="img-fluid main__img" src="./Img/calza.jpeg" alt="">
+            <figcaption class="main__caption">Calzado</figcaption>
+          </a>
+          <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/accesorios.html">
+            <img class="img-fluid main__img" src="./Img/acce.jpeg" alt="">
+            <figcaption class="main__caption">Accesorios</figcaption>
+          </a>
+          <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/sale.html">
+            <img class="img-fluid main__img" src="./Img/png_20211205_164812_0000_2.png" alt="">
+            <figcaption class="main__caption">Sale!</figcaption>
+          </a>
         </div>
-        <div class="footer__contact">
-            <table cellspacing="10">
-                <form action="#" method="get">
-                    <tr>
-                        <td><label class="footer__label" for="name">Nombre</label></td>
-                        <td><input class="footer__input" type="text" name="name" id="name" placeholder="Introduzca su nombre"></td>
-                        <td><input class="footer__button" type="submit" value="Enviar"></td>
-                    </tr>
-                    <tr>
-                        <td><label class="footer__label" for="email">E-mail</label></td>
-                        <td><input class="footer__input" type="email" name="email" id="email" placeholder="Introduzca su e-mail"></td>
-                        <td><input class="footer__button" type="reset" value="Borrar"></td>
-                    </tr>
-                </form>
-            </table>
+      </main>
+      <hr class="body__line">
+      <footer class="container-fluid mt-5">
+        <div class="row container-fluid footer__row">  
+            <div class="col-lg-3 col-md-6 col-sm12 d-flex justify-content-center align-items-center">
+                  <a class="footer__logos heartbeat" href="https://www.facebook.com">
+                      <img class="footer__img" src="./Img/lo-face.jpeg" alt="">
+                  </a>
+                  <a class="footer__logos heartbeat" href="https://www.instagram.com">
+                      <img class="footer__img" src="./Img/lo-insta copia.jpeg" alt="">
+                  </a>
+                  <a class="footer__logos heartbeat" href="https://www.whatsapp.com/?lang=es">
+                      <img class="footer__img" src="./Img/lo-wat copia.jpeg" alt="">
+                  </a>    
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                  <button type="button" class="btn btn-primary modal__start shake-bottom" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Contacto
+                  </button>
+              </div>
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div style="background-image: url(./Img/rr-pelo.jpeg);" class="modal-header">
+                      <h5 class="modal-title modal__title" id="exampleModalLabel">Contacto</h5>
+                      <button type="button" class="btn-close modal__x" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div style="background-color: transparent;" class="modal-body">
+                        <table>         
+                            <form action="#" method="get">
+                                <tr class="form__row"">
+                                    <td><label class="modal__label" for="name">Nombre</label></td>
+                                    <td><input type="text" name="name" id="name" placeholder="Introduzca su nombre"></td>  
+                                </tr>    
+                                <tr class="form__row">
+                                    <td><label class="modal__label" for="email">E-mail</label></td>
+                                    <td><input type="email" name="email" id="email" placeholder="Introduzca su e-mail"></td>
+                                </tr>  
+                                <tr class="form__row--buttons">
+                                    <td><input class="btn btn-secondary modal__button modal__button" type="reset" value="Borrar"></td>
+                                    <td><input style="background-color: transparent;" class="btn btn-primary modal__button modal__button" type="submit" value="Enviar"></td>
+                                </tr>         
+                            </form>
+                        </table>
+                    </div>
+                    <div style="background-color: transparent;" class="modal-footer">
+                      <button type="button" class="btn btn-secondary modal__button modal__button" data-bs-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                  <h6 class="footer__text">¡Envios a todo el pais!</h6>
+              </div>
+              <div class="embed-responsive embed-responsive-1by1 col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center footer__map">
+                  <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13144.432285766752!2d-58.4798156!3d-34.550819!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x887c745720a0e9b6!2sParque%20Saavedra!5e0!3m2!1ses-419!2sar!4v1638793181676!5m2!1ses-419!2sar" style="min-height: 200px;" allowfullscreen="" loading="lazy"></iframe>
+              </div>
         </div>
-        <div>
-            <article>
-                <p></p>
-            </article>
-            <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13144.432285766752!2d-58.4798156!3d-34.550819!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x887c745720a0e9b6!2sParque%20Saavedra!5e0!3m2!1ses-419!2sar!4v1638793181676!5m2!1ses-419!2sar" width="300" height="230" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </footer>
-    
-</body>
-</html>
+      </footer>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</bodyclass>
+</html> 
