--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <meta name="description" content="En Nicky Indumentaria encontraras el mejor estilo para vos y tus prendas.">
+    <meta name="keywords" content="tienda, indumentaria femenina, ropa, moda, mujer, accesorios, calzado, buenos aires, argentina.">  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Nicky Indumentaria - Pagina principal</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body  class="bg-image container-fluid d-flex flex-column align-items-center">
       <header class="container-fluid header mt-3"> 
@@ -63,19 +65,19 @@
       <main class="main container-fluid my-2">
         <div class="row main__row">
           <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/indumentaria.html">
-            <img class="img-fluid main__img" src="./Img/indume.jpeg" alt="">
+            <img class="img-fluid main__img" src="./Img/indume.jpeg" alt="Indumentaria">
             <figcaption class="main__caption">Indumentaria</figcaption>
           </a>
           <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/calzados.html">       
-            <img class="img-fluid main__img" src="./Img/calza.jpeg" alt="">
+            <img class="img-fluid main__img" src="./Img/calza.jpeg" alt="Calzado">
             <figcaption class="main__caption">Calzado</figcaption>
           </a>
           <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/accesorios.html">
-            <img class="img-fluid main__img" src="./Img/acce.jpeg" alt="">
+            <img class="img-fluid main__img" src="./Img/acce.jpeg" alt="Accesorios">
             <figcaption class="main__caption">Accesorios</figcaption>
           </a>
           <a class="col-xl-3 col-lg-6 col-md-6 col-xs-12 d-flex justify-content-center imghvr-hinge-down main__link" href="./pages/sale.html">
-            <img class="img-fluid main__img" src="./Img/png_20211205_164812_0000_2.png" alt="">
+            <img class="img-fluid main__img" src="./Img/png_20211205_164812_0000_2.png" alt="Sale!">
             <figcaption class="main__caption">Sale!</figcaption>
           </a>
         </div>
@@ -85,13 +87,13 @@
         <div class="row container-fluid footer__row">  
             <div class="col-lg-3 col-md-6 col-sm12 d-flex justify-content-center align-items-center">
                   <a class="footer__logos heartbeat" href="https://www.facebook.com">
-                      <img class="footer__img" src="./Img/lo-face.jpeg" alt="">
+                      <img class="footer__img" src="./Img/lo-face.jpeg" alt="facebook">
                   </a>
                   <a class="footer__logos heartbeat" href="https://www.instagram.com">
-                      <img class="footer__img" src="./Img/lo-insta copia.jpeg" alt="">
+                      <img class="footer__img" src="./Img/lo-insta copia.jpeg" alt="instagram">
                   </a>
                   <a class="footer__logos heartbeat" href="https://www.whatsapp.com/?lang=es">
-                      <img class="footer__img" src="./Img/lo-wat copia.jpeg" alt="">
+                      <img class="footer__img" src="./Img/lo-wat copia.jpeg" alt="whatsapp">
                   </a>    
               </div>
               <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
