--- a/pages/sale.html
+++ b/pages/sale.html
@@ -11,8 +11,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sale</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="Nicky indumentaria outlet, sale, descuentos, ofertas, temporada anterior.">
+    <meta name="keywords" content="outlet, ofertas, descuentos, sale, temporada anterior, limitado stock, prendas sin cambio.">
+    <title>Nicky Tienda - Sale</title>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body  class="bg-image container-fluid d-flex flex-column align-items-center">
       <header class="container-fluid header mt-3"> 
@@ -64,7 +66,7 @@
       <section class="container">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfis_03.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfis_03.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -72,7 +74,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfis_04.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfis_04.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -80,7 +82,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfis_05.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfis_05.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -88,7 +90,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfis_12.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfis_12.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -96,7 +98,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfis_07.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfis_07.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -104,7 +106,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfis_08.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfis_08.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -112,7 +114,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfi_17.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfi_17.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -120,7 +122,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfi_18.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfi_18.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -128,7 +130,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfi_19.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfi_19.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -136,7 +138,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfi_20.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfi_20.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -144,7 +146,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfi_17.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfi_17.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -152,7 +154,7 @@
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
-                <img src="../Img/outfi_18.jpeg" class="card-img-top pulsate-bck" alt="...">
+                <img src="../Img/outfi_18.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
                   <h5 class="card-title section__card">Card title</h5>
                   <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -166,13 +168,13 @@
         <div class="row container-fluid footer__row">  
             <div class="col-lg-3 col-md-6 col-sm12 d-flex justify-content-center align-items-center">
                   <a class="footer__logos heartbeat" href="https://www.facebook.com">
-                      <img class="footer__img" src="../Img/lo-face.jpeg" alt="">
+                      <img class="footer__img" src="../Img/lo-face.jpeg" alt="facebook">
                   </a>
                   <a class="footer__logos heartbeat " href="https://www.instagram.com">
-                      <img class="footer__img" src="../Img/lo-insta copia.jpeg" alt="">
+                      <img class="footer__img" src="../Img/lo-insta copia.jpeg" alt="instagram">
                   </a>
                   <a class="footer__logos heartbeat" href="https://www.whatsapp.com/?lang=es">
-                      <img class="footer__img" src="../Img/lo-wat copia.jpeg" alt="">
+                      <img class="footer__img" src="../Img/lo-wat copia.jpeg" alt="whatsapp">
                   </a>    
               </div>
               <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
