--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -68,129 +68,129 @@
             <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_12.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-tex section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-tex section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
                <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_07.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_08.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-tex section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-tex section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_09.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_11.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_20.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_21.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_22.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_16.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outif_13.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_22.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_09.jpeg" class="card-img-top" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_08.jpeg" class="card-img-top" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_19.jpeg" class="card-img-top" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
+              <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_18.jpeg" class="card-img-top" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                   <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
         </div>
