--- a/pages/sale.html
+++ b/pages/sale.html
@@ -68,97 +68,97 @@
             <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_03.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_04.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_05.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_12.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_07.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfis_08.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al Carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_17.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_18.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_19.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_20.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_17.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al carrito</a>
                 </div>
               </div>
               <div class="card col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-12 section__card--place" style="width: 18rem;">
                 <img src="../Img/outfi_18.jpeg" class="card-img-top pulsate-bck" alt="Contenido no soportado">
                 <div class="card-body">
-                  <h5 class="card-title section__card">Card title</h5>
-                  <p class="card-text section__card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary section__button">Go somewhere</a>
+                  <h5 class="card-title section__card">Arma tu Combo</h5>
+                  <p class="card-text section__card-text">Talles: -XS -S -L -XL -XXL</p>
+                  <a href="#" class="btn btn-primary section__button">Añadir al carrito</a>
                 </div>
               </div>
         </div>
@@ -209,7 +209,7 @@
                     </div>
                     <div style="background-color: transparent;" class="modal-footer">
                       <button type="button" class="btn btn-secondary modal__button modal__button" data-bs-dismiss="modal">Close</button>
-                    </div>
+            
                   </div>
                 </div>
               </div>
